# avm

./: .avm.json  .gitignore  AGENTS.md  CHANGELOG.md  README.md  package.json
.github/workflows/: release.yml
crates/avm-cli/: Cargo.toml
crates/avm-cli/src/: main.rs  ui.rs
crates/avm-cli/src/cli/: alias_commands.rs  app.rs  args.rs  command_parser.rs  config_commands.rs  imports.rs  node_selection.rs  node_versions.rs  plugin_commands.rs  provider_commands.rs  provider_selection.rs  provider_versions.rs  shell.rs  shim_commands.rs  state.rs  tool_commands.rs
crates/avm-cli/tests/: cli_scenarios.rs
crates/avm-core/: Cargo.toml
crates/avm-core/src/: config.rs  resolver.rs
crates/avm-plugin-api/: Cargo.toml
crates/avm-plugin-api/src/: lib.rs
crates/avm-plugin-node/: Cargo.toml
crates/avm-plugin-node/src/: aliases.rs  install.rs  lib.rs  versions.rs
crates/avm-runtime/: Cargo.toml
crates/avm-runtime/src/: lib.rs
crates/avm-shims/: Cargo.toml
crates/avm-shims/src/: lib.rs
docker/tests/: lib.sh
docker/tests/scenarios/: 05-plugin-first-node.sh  06-asdf-java-plugin.sh
docs/: android-plugin-plan.md
docs/architecture/: ARCHITECTURE.md  FLOW.md
docs/migration/: RUST_REWRITE.md
docs/ops/: TESTING.md
